fix generate & update ws
